--- a/TraceIdentifierPoc/nlog.config
+++ b/TraceIdentifierPoc/nlog.config
@@ -14,7 +14,7 @@
 
     <!-- another file log, only own logs. Uses some ASP.NET core renderers -->
     <target xsi:type="File" name="ownFile-web" fileName="c:\logs\TraceIdentifierPoc\nlog-own-${shortdate}.log"
-            layout="${longdate}|${aspnet-TraceIdentifier}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
+            layout="${longdate}|${aspnet-traceidentifier}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
   </targets>
 
   <!-- rules to map from logger name to target -->
